# mcp-server

./: .bandit.yaml  .coverage  .env.example  .gitignore  .gitleaks.toml  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXECUTION_LOG.md  FUNCTIONAL_AUDIT.md  GAP_ANALYSIS.md  LAUNCHGUIDE.md  LICENSE  README.md  SECURITY.md  TCK_REPORT.md  THREAT_MODEL.md  agent.json  config-schema.json  docker-compose.yml  docker-compose.yml.bak-pre-window2-20260430  docker-compose.yml.pre-limits  glama.json  init_db.sql  pyproject.toml  requirements.txt  server.json  smithery.yaml  stdio_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chaos.yml  gitleaks.yml  provider_compat.yml  publish-mcp.yml  publish.yml  tests.yml
.well-known/: security.txt
assets/pitch/: linkedin_open_defense_drafts.md  open_defense_proprietary_governance.md
deploy/: .env.example  docker-compose.yml
docs/: README_legacy.md  claude-desktop-config.json  quickstart.md
docs/audit/: COMPETITIVE_BENCHMARK_2026-04-25.md  E2E_AUDIT_2026-04-25.md  E2E_AUDIT_FINDINGS.csv  PENTEST_REPORT_2026-04-25.md  PERFORMANCE_BASELINE_2026-04-25.md  SOC2_READINESS_2026-04-25.md  registry-investigation.md  tools-inventory.md  v2-tools-validation.md
docs/compliance/: DPA_TEMPLATE.md  README.md  a2a-opt-outs.md  current.md  data-handling.md  roadmap.md  sub-processors.md
docs/features/: cache-savings.md  rate-limiting.md
docs/integrations/: datadog.md  grafana-tempo.md  honeycomb.md
docs/operations/: deploy-runbook.md  resource-limits.md
docs/performance/: baseline-v3.13.0.md
docs/protocol/: COMPLIANCE.md  completions.md  logging.md
docs/reliability/: chaos-report.md  runbook.md
docs/security/: guardrails-roadmap.md  incident-2026-04-24.md  security_audit_2026-04-25.md
docs/self-hosted/: quickstart.md
migrations/: 002_oauth.sql  002_registry.sql  003_plans.sql  003_seed_registry.sql  003_smart_router.sql  004_trust_scores.sql  005_outcome_validation.sql  006_policy_engine.sql  007_outcome_benchmarking.sql  008_compliance_export.sql  009_agent_sla.sql
scripts/: audit_live.sh  cleanup_orphan_keys.sh  cleanup_orphan_keys_dryrun.sh  test_backup_restore.sh
sdk/js/: package.json  tsconfig.json
sdk/python/: pyproject.toml
sdk/python/thinkneo/: client.py
src/: _common_obs.py  a2a_bridge.py  agent_card.py  agent_sla.py  auth.py  badge.py  brain_client.py  capabilities.py  circuit_breaker.py  completions_capability.py  compliance_export.py  config.py  database.py  free_tier.py  landing.py  logging_capability.py  marketplace.py  oauth.py  observability.py  otel.py  outcome_benchmarking.py  outcome_validation.py  plans.py  policy_engine.py  redis_client.py  registry_landing.py  security.py  server.py  server.py.pre-obs  signup.py  smart_router.py  tool_logger.py
src/audit/: export.py
src/finops/: caching.py
src/logging/: redaction.py
src/middleware/: otel_middleware.py  rate_limit.py
src/thinkshield/: __init__.py  config.py  engine.py  types.py
src/tools/: __init__.py  __init__.py.pre-obs  _common.py  a2a_audit.py  a2a_flow.py  a2a_log.py  a2a_policy.py  agent_sla.py  alerts.py  audit_export.py  benchmarking.py  billing_cancel.py  billing_signup.py  billing_status.py  billing_subscribe.py  billing_upgrade.py  bridge.py  budget.py  cache.py  compare_models.py  compliance.py  compliance_export.py  guardrails.py  guardrails_free.py  injection.py  memory.py  observability.py  optimize_prompt.py  outcome_validation.py  pii_intl.py  policy.py  policy_engine.py  providers.py  registry.py  rotate_key.py  router_route.py  router_savings.py  router_simulate.py  scheduling.py  secrets.py  (+13 more)
templates/: welcome_free_tier.html
tests/: README.md  conftest.py
tests/adversarial/: test_injection_corpus.py  test_property_based.py
tests/chaos/: conftest.py  docker-compose-chaos.yml  test_high_latency.py  test_postgres_down.py  test_provider_rate_limit.py  test_provider_timeout.py  test_redis_down.py
tests/compat/: README.md  conftest.py  test_anthropic.py  test_google.py  test_nvidia.py  test_openai.py
tests/deploy/: test_docker_compose_boot.sh
tests/functional/: test_a2a_governance_e2e.py  test_every_a2a_skill.py  test_every_mcp_tool.py
tests/performance/: test_latency.py
tests/regression/: test_tool_inventory.py
tests/security/: test_auth_bypass.py  test_path_traversal.py  test_sql_injection.py  test_ssrf.py  test_xss_shell_detection.py
tests/thinkshield/: conftest.py  test_engine.py  test_perf.py  test_rules_abuse.py  test_rules_auth.py  test_rules_headers.py  test_rules_injection.py  test_rules_recon.py
tests/unit/: test_audit_export.py  test_cache_tracking.py  test_log_redaction.py  (+7 more)
(+33 files in other folders)
