[project]
name = "thinkneo-mcp-server"
version = "1.0.2"
description = "Enterprise AI Control Plane — MCP server for spend tracking, guardrails, policy enforcement, budget monitoring, compliance, and provider health."
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ThinkNEO", email = "hello@thinkneo.ai" },
]
readme = "README.md"
keywords = ["mcp", "ai-governance", "finops", "guardrails", "compliance"]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://thinkneo.ai"
Repository = "https://github.com/thinkneo-ai/mcp-server"
Documentation = "https://github.com/thinkneo-ai/mcp-server#readme"

[project.scripts]
thinkneo-mcp = "src.server:main"
thinkneo-mcp-stdio = "src.server:run_stdio"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
