[project]
name = "thinkneo-mcp-server"
version = "1.0.2"
description = "Enterprise AI Control Plane — MCP server for spend tracking, guardrails, policy enforcement, budget monitoring, compliance, and provider health."
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ThinkNEO", email = "hello@thinkneo.ai" },
]
readme = "README.md"
keywords = ["mcp", "ai-governance", "finops", "guardrails", "compliance"]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://thinkneo.ai"
Repository = "https://github.com/thinkneo-ai/mcp-server"
Documentation = "https://github.com/thinkneo-ai/mcp-server#readme"

[project.scripts]
thinkneo-mcp = "src.server:main"
thinkneo-mcp-stdio = "src.server:run_stdio"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "adversarial: adversarial injection/PII tests",
    "security: security tests (SQLi, SSRF, path traversal, auth bypass)",
    "performance: latency benchmarks",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
