[project]
name = "thinkneo"
version = "0.1.0"
description = "Python SDK for the ThinkNEO MCP Server — Enterprise AI Control Plane"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ThinkNEO", email = "hello@thinkneo.ai" },
]
readme = "README.md"
keywords = ["thinkneo", "mcp", "ai-governance", "guardrails", "finops", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://thinkneo.ai"
Documentation = "https://github.com/thinkneo-ai/mcp-server/blob/main/docs/quickstart.md"
Repository = "https://github.com/thinkneo-ai/mcp-server"
Issues = "https://github.com/thinkneo-ai/mcp-server/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["thinkneo*"]
